2004-05-17  Han-Wen Nienhuys   <hanwen@xs4all.nl>


	* lily/book-paper-def.cc (ly_bookpaper_fonts): move from Paperdef
	(find_scaled_font): move from Paper_def

2004-05-16  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/my-lily-parser.cc (LY_DEFINE): new function ly_parser_lookup
	(LY_DEFINE): add SCM_ASSERT_TYPE everywhere.

	* po/fr.po: update po.

	* lily/include/book-paper-def.hh (class Book_paper_def): new file.

	* lily/book-paper-def.cc (print_smob): new file.

2004-05-16  Heikki Junes <hjunes@cc.hut.fi>

	* buildscripts/lilypond-words.py: search words also from
	music-functions-init.ly.

2004-05-15  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* ly/music-functions-init.ly (def-music-function): new helper
	macro for defining music functions. \addlyrics \appoggiatura
	\acciaccatura \grace \partcombine \autochange \applycontext
	\applyoutput and \breathe are now defined here thanks to it.

	* lily/parser.yy: 
	* lily/my-lily-lexer.cc: \addlyrics \appoggiatura \acciaccatura
	\grace \partcombine \autochange \applycontext \applyoutput and
	\breathe keywords removed from the parser.

	* lily/parser.yy: 
	* lily/music-function.cc (ly_make_music_function): 
	* lily/lexer.ll (music_function_type): added a case for 0-arg
	music functions.

2004-05-14  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* scm/ly-from-scheme.scm (read-lily-expression):  A variable
	refering to a music expression can be used in lily-inside-scheme:
	#{ $music #}

	* lily/my-lily-parser.cc (LY_DEFINE): introduce ly:clone-parser
	and ly:parser-define, and change ly:parser-parse-string in order
	to make #{ $music #} work.

	* scm/new-markup.scm (compile-markup-expression): when an argument
	is a string, use `make-simple-markup'.

2004-05-14  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/parser.yy (My_lily_lexer): bugfix; op should be tag.  

2004-05-10  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scripts/convert-ly.py (FatalConversionError.func): handle + in
	font-size. (backportme)
