@@ -1,5 +1,10 @@
-2004-05-17  Han-Wen Nienhuys   <hanwen@xs4all.nl>
+2004-05-17  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* scm/output-gnome.scm: New file.
+
+	* lily/include/book-paper-def.hh: Add.  Janitorial fixes.
+
+2004-05-17  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
 	* lily/book-paper-def.cc (ly_bookpaper_fonts): move from Paperdef
 	(find_scaled_font): move from Paper_def
